# usd-metal-cpp

./: CMakeLists.txt  appdel.cpp  appdel.hpp  main.cpp  renderer.cpp  renderer.hpp  view.cpp  view.hpp
metal-cmake/: CmakeLists.txt  defination.cpp
shaders/: shader.metal
src/: CMakeLists.txt  renderer.cpp
